tests/baselines/reference/circularImportAlias.errors.txt
circularImportAlias.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
circularImportAlias.ts(5,30): error TS2449: Class 'C' used before its declaration.
circularImportAlias.ts(10,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== circularImportAlias.ts (3 errors) ====
    // expected no error
    
    module B {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export import a = A;
        export class D extends a.C {
                                 ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 circularImportAlias.ts:11:18: 'C' is declared here.
            id: number;
        }
    }
    
    module A {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class C { name: string }
        export import b = B;
    }
    
    var c: { name: string };
    var c = new B.a.C();
    
    
    